--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,3 @@
-<!-- /*
-* Template Name: Archiark
-* Template Author: Untree.co
-* Tempalte URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -12,13 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<meta name="author" content="Untree.co">
-	<link rel="shortcut icon" href="favicon.png">
+	<link rel="shortcut icon" href="images/Icon.png">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap5" />
-	
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
@@ -32,11 +23,18 @@
 	<link rel="stylesheet" href="css/project.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="plugins/glightbox/css/glightbox.min.css">
 	
 
-	<title>Archiark &mdash; Free Bootstrap 5 Website Template by Untree.co</title>
+	<title>Nusa Dinamika Solusindo</title>
 </head>
 <body>
+	<div class="preloader" id="preloader">
+		<div class="preloader-logo">
+		 <img src="images/preloader.png" alt="">
+		</div>
+	
+	  </div>
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -55,7 +53,7 @@
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li class="has-children">
-						<a href="#">Projects</a>
+						<a href="#">About</a>
 						<ul class="dropdown">
 							<li><a href="#">Commercial Building</a></li>
 							<li><a href="#">Cultural Lifestyle</a></li>
@@ -70,7 +68,7 @@
 						</ul>
 					</li>
 					<li><a href="#">Services</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#">Project & Galery</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 
@@ -87,7 +85,7 @@
 		</div>
 	</nav>
 
-	<div class="hero-2 overlay" style="background-image: url('images/img_3.jpg');">
+	<div class="hero-2 overlay" style="background-image: url('images/Hero/Hero Project.jpg');">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-5 mx-auto ">
@@ -535,10 +533,10 @@
 			<div class="row g-4 portfolio-container" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
-						<a>
-							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+						<a href="images/projects/SI AP 2.jpg" data-gallery="galery" class="portfokio-lightbox" title="">
+							<img src="images/projects/SI AP 2.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
+								<h3>Soil Investigation AP 2</h3>
 								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
@@ -546,11 +544,11 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SR Jayapura.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Resistivity Jayapura</h3>
+								<div class="cat">Soil Resistivity</div>
 							</div>
 						</a>
 					</div>
@@ -558,44 +556,10 @@
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
-							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
+							<img src="images/projects/SI Bandara Juanda.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Bandara Juanda</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
@@ -604,66 +568,32 @@
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a>
-							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+							<img src="images/projects/SR Batubara.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
-								<div class="cat">Soil Investigation</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Resistivity Batubara</h3>
+								<div class="cat">Soil Resistivity</div>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI TP Bandara Kualanamu CBR.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Topographic Bandara Kualanamu CBR</h3>
+								<div class="cat">Soil Investigation Topographic</div>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI Cihapit.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Cihapit</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
@@ -672,9 +602,9 @@
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a>
-							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+							<img src="images/projects/SI IKEA KBP.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
+								<h3>Soil Investigation IKEA KBP</h3>
 								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
@@ -682,11 +612,11 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SR Banten.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Resistivity Banten</h3>
+								<div class="cat">Soil Resistivity</div>
 							</div>
 						</a>
 					</div>
@@ -694,44 +624,10 @@
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
 					<div class="single-portfolio portfolio-wrap">
 						<a href="project-single.html">
-							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
+							<img src="images/projects/SI CBR Shell.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
-							</div>
-						</a>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
-					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation CBR Shell</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
@@ -740,32 +636,32 @@
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
 						<a>
-							<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+							<img src="images/projects/SI Apron Makassar.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Soil Resistivity (SR) Survey of Gas Pipeline Plan, in the Muarateweh Area</h3>
+								<h3>Soil Investigation Apron Makassar</h3>
 								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_2.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI TP Sampang Agung.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Topographic Sampang Agung</h3>
+								<div class="cat">Soil Investigation Topographic</div>
 							</div>
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_3.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI SR BT Kuala Tanjung.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Soil Resistivity BT Kuala Tanjung</h3>
+								<div class="cat">Soil Investigation Soil Resistivity</div>
 							</div>
 						</a>
 					</div>
@@ -773,37 +669,106 @@
 
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_4.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI Apron Zona 4.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation Apron Zona 4</h3>
+								<div class="cat">Soil Investigation</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-animal">
+					<div class="single-portfolio portfolio-wrap">
+						<a>
+							<img src="images/projects/SI JGC NYIA.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Investigation JGC NYIA</h3>
+								<div class="cat">Soil Investigation</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-brush">
+					<div class="single-portfolio portfolio-wrap">
+						<a href="project-single.html">
+							<img src="images/projects/SI Kantor Sewa Tekno Polis.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Investigation Kantor Sewa Tekno Polis</h3>
+								<div class="cat">Soil Investigation</div>
+							</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
+					<div class="single-portfolio portfolio-wrap">
+						<a>
+							<img src="images/projects/SI CK Mondelez.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Investigation CK Mondelez</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic">
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_5.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SI UPV Zona 1 2 3.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Investigation UPV Zona 1 2 3</h3>
+								<div class="cat">Soil Investigation</div>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
 					<div class="single-portfolio portfolio-wrap">
-						<a href="project-single.html">
-							<img src="images/img_6.jpg" alt="Image" class="img-fluid">
+						<a>
+							<img src="images/projects/SR Dermaga Merunda.jpg" alt="Image" class="img-fluid">
 							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">Construction</div>
+								<h3>Soil Resistivity Dermaga Merunda</h3>
+								<div class="cat">Soil Resistivity</div>
 							</div>
 						</a>
 					</div>
 				</div>
+
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
+					<div class="single-portfolio portfolio-wrap">
+						<a>
+							<img src="images/projects/STR UPV Tahap 2.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Resistivity UPV Tahap 2</h3>
+								<div class="cat">Soil Resistivity</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
+					<div class="single-portfolio portfolio-wrap">
+						<a>
+							<img src="images/projects/SI Summarecon Area R9.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Investigation Summarecon Area R9</h3>
+								<div class="cat">Soil Investigation</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 portfolio-item filter-basic" >
+					<div class="single-portfolio portfolio-wrap">
+						<a>
+							<img src="images/projects/SI Pabrik Kendal.jpg" alt="Image" class="img-fluid">
+							<div class="contents">
+								<h3>Soil Investigation Pabrik Kendal</h3>
+								<div class="cat">Soil Investigation</div>
+							</div>
+						</a>
+					</div>
+				</div>
+
 
 				
 
@@ -952,17 +917,31 @@
 		</div>
 	</div>
 
+	<div class="social-icons">
+		<div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0 position-fixed">
+			<a class="btn m-3" target="_blank" href="https://api.whatsapp.com/send?phone=6281323322008"><i class="icon-whatsapp"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.facebook.com/NusaDinamikaSolusindo"><i class="icon-facebook"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.instagram.com/ndsengineering/"><i class="icon-instagram"></i></a>
+			<a class="btn m-3" target="_blank" href="https://www.linkedin.com/company/nusa-dinamika-solusindo/"><i class="icon-linkedin"></i></a>
 
-	
-
-
-	<!-- Preloader -->
-	<div id="overlayer"></div>
-	<div class="loader">
-		<div class="spinner-border" role="status">
-			<span class="visually-hidden">Loading...</span>
 		</div>
 	</div>
+
+	<!-- JavaScript Preloader -->
+	<script>
+		$(document).ready(function(){   
+				window.setTimeout('fadeout();', 500);
+				
+			});
+			function fadeout(){
+				$('#preloader').delay(500).fadeOut('slow', function() {
+				   $('.notLoaded').removeClass('notLoaded');
+				});
+			}
+		
+		
+		</script>
+
 
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/tiny-slider.js"></script>
@@ -971,5 +950,6 @@
 	<script src="js/navbar.js"></script>
 	<script src="js/counter.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="plugins/glightbox/js/glightbox.min.js"></script>
 </body>
 </html>
