--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
+	<div class="preloader" id="preloader">
+		<div class="preloader-logo">
+		 	<img src="images/preloader.png" alt="">
+		</div>
+	
+	</div>
+
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
@@ -74,7 +81,7 @@
 					<span></span>
 				</a>
 				<ul class="site-menu float-end d-none d-md-block">
-					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 2 292 4392 327</span></a></li>
+					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+62-22-204-50338</span></a></li>
 				</ul>
 
 			</div>
@@ -738,7 +745,7 @@
 	</div>
 	
 
-	<div class="site-footer">
+	<div class="site-footer bg-light">
 		<div class="container">
 
 			<div class="row justify-content-between">
@@ -824,13 +831,6 @@
 		</div>
 	</div>
 
-	<!-- Preloader -->
-	<div id="overlayer"></div>
-	<div class="loader">
-		<div class="spinner-border" role="status">
-			<span class="visually-hidden">Loading...</span>
-		</div>
-	</div>
 
 	<!-- jQuery -->
 	<script src="plugins/jQuery/jquery.min.js"></script>
