--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,10 @@
 <body>
 	<div class="preloader" id="preloader">
 		<div class="preloader-logo">
-		 <img src="images/preloader.png" alt="">
+		 	<img src="images/preloader.png" alt="">
 		</div>
 	
-	  </div>
+	</div>
 
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -78,7 +78,7 @@
 					<span></span>
 				</a>
 				<ul class="site-menu float-end d-none d-md-block">
-					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 2 292 4392 327</span></a></li>
+					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+62-22-204-50338</span></a></li>
 				</ul>
 
 			</div>
@@ -843,7 +843,7 @@
 	</div>
 	
 
-	<div class="site-footer">
+	<div class="site-footer bg-light">
 		<div class="container">
 
 			<div class="row justify-content-between">
@@ -910,7 +910,7 @@
 
 			<div class="row justify-content-center text-center copyright">
 				<div class="col-md-8">
-					<br class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> </br>Distributed By <a href="https://themewagon.com/" >Themewagon</a> </p><!-- License information: https://untree.co/license/ -->
+					<p class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; by Nusa Dinamika Solusindo
 					</p>
 				</div>
 			</div>
@@ -926,30 +926,34 @@
 
 		</div>
 	</div>
+	
 
-	<!-- JavaScript Preloader -->
-	<script>
-		$(document).ready(function(){   
-				window.setTimeout('fadeout();', 500);
-				
-			});
-			function fadeout(){
-				$('#preloader').delay(500).fadeOut('slow', function() {
-				   $('.notLoaded').removeClass('notLoaded');
-				});
-			}
-		
-		
-		</script>
 
+	<!-- jQuery -->
+	<script src="plugins/jQuery/jquery.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.animateNumber.min.js"></script>
 
 	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="plugins/slick/slick.min.js"></script>
 	<script src="js/tiny-slider.js"></script>
 	<script src="js/aos.js"></script>
 	<script src="js/glightbox.min.js"></script>
 	<script src="js/navbar.js"></script>
 	<script src="js/counter.js"></script>
 	<script src="js/custom.js"></script>
-	<script src="plugins/glightbox/js/glightbox.min.js"></script>
+	<script src="js/client.js"></script>
+	<script src="js/popper.js"></script>
+	<script src="js/burgermenu.js"></script>
+	<script src="js/project.js"></script>
+	<script src="plugins/isotope-layout/isotope.pkgd.min.js"></script>
+
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="http://iprodev.github.io/Scrollax.js/lib/scrollax.min.js"></script>
+	
 </body>
 </html>
