--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-compass"></i>
+							<img src="images/Icon/Engineering Design.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Interior Design</h3>
+							<h3 class="h6 fw-bold text-black">Engineering Design</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -212,10 +212,10 @@
 				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-plan"></i>
+							<img src="images/Icon/Geophysics.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Landscape Design</h3>
+							<h3 class="h6 fw-bold text-black">Geophysics</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -226,10 +226,10 @@
 				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-architect"></i>
+							<img src="images/Icon/Lab Test.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Engineering Plan</h3>
+							<h3 class="h6 fw-bold text-black">Lab Test</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -243,10 +243,10 @@
 
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-color-palette"></i>
+							<img src="images/Icon/Material Structural Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Architecture Design</h3>
+							<h3 class="h6 fw-bold text-black">Material Structural Investigation</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -257,10 +257,10 @@
 				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-ruler"></i>
+							<img src="images/Icon/Soil Investigation.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Interior Planning</h3>
+							<h3 class="h6 fw-bold text-black">Soil Investigation</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -271,10 +271,10 @@
 				<div class="col-lg-4">
 					<div class="d-flex custom-card">
 						<div class="img">
-							<i class="flaticon-wall"></i>
+							<img src="images/Icon/Topographic Survey.png" alt="">
 						</div>
 						<div class="text">
-							<h3 class="h6 fw-bold text-black">Floor Plan</h3>
+							<h3 class="h6 fw-bold text-black">Topographic Survey</h3>
 							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
 							<p>
 								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
@@ -302,9 +302,10 @@
 
 				  <div class="button-group filters-button-group portfolio-flters">
 					<button class="button is-checked" data-filter="*">All</button>
-					<button class="button" data-filter=".filter-basic">Corujas</button>
-					<button class="button" data-filter=".filter-brush">Paisagens</button>
-					<button class="button" data-filter=".filter-animal">Galáxias</button>
+						<button class="button" data-filter=".filter-basic">Soil Investigation</button>
+						<button class="button" data-filter=".filter-brush">Engineering design & Consultancy</button>
+						<button class="button" data-filter=".filter-animal">Survey Mapping</button>
+						<button class="button" data-filter=".filter-animal">Geophysical and Geological Survey</button>
 				  </div>
 				</div>
 			</div>
