--- a/projects.html
+++ b/projects.html
@@ -520,9 +520,10 @@
 				<div class="col-lg-12 d-flex justify-content-center">
 					<div class="button-group filters-button-group portfolio-flters">
 						<button class="button is-checked" data-filter="*">All</button>
-						<button class="button" data-filter=".filter-basic">Corujas</button>
-						<button class="button" data-filter=".filter-brush">Paisagens</button>
-						<button class="button" data-filter=".filter-animal">Galáxias</button>
+						<button class="button" data-filter=".filter-basic">Soil Investigation</button>
+						<button class="button" data-filter=".filter-brush">Engineering design & Consultancy</button>
+						<button class="button" data-filter=".filter-animal">Survey Mapping</button>
+						<button class="button" data-filter=".filter-animal">Geophysical and Geological Survey</button>
 					  </div>
 				</div>
 			  </div>
