--- a/projects.html
+++ b/projects.html
@@ -843,7 +843,7 @@
 	</div>
 	
 
-	<div class="site-footer bg-light">
+	<div class="site-footer">
 		<div class="container">
 
 			<div class="row justify-content-between">
@@ -910,7 +910,7 @@
 
 			<div class="row justify-content-center text-center copyright">
 				<div class="col-md-8">
-					<p class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; by Nusa Dinamika Solusindo
+					<p class="small" >Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; by Nusa Dinamika Solusindo
 					</p>
 				</div>
 			</div>
