--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li class="has-children">
-						<a href="#">About</a>
+						<a href="about.html">About</a>
 						<ul class="dropdown">
 							<li><a href="#">Commercial Building</a></li>
 							<li><a href="#">Cultural Lifestyle</a></li>
@@ -136,16 +136,16 @@
 
 
 
-	<div class="section sec-1">
+	<div class="section sec-1 about" id="about">
 		<div class="container">
 			<div class="row g-0">
-				<div class="col-lg-4">
+				<div class="col-lg-4 order-1">
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
 					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
 				</div>
-				<div class="col-lg-7 ms-auto" data-aos="fade-up" data-aos-delay="500">
+				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-up" data-aos-delay="500">
 					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
 				</div>
 			</div>
